first dynamic test

--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ group 'org.example'
 version '1.0-SNAPSHOT'
 
 repositories {
-    mavenCentral()
+    jcenter()
 }
 
 wrapper {
@@ -19,11 +19,11 @@ dependencies {
 
     testImplementation 'com.willowtreeapps.assertk:assertk-jvm:0.17'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.4.2'
-    testRuntime 'org.junit.jupiter:junit-jupiter-engine:5.4.2'
-    testRuntime "org.junit.platform:junit-platform-launcher:1.5.2"
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.4.2'
+    testRuntimeOnly "org.junit.platform:junit-platform-launcher:1.5.2"
 
     testImplementation "dev.minutest:minutest:+"
-    testImplementation "io.strikt:strikt-core:0.24.0"s
+    testImplementation "io.strikt:strikt-core:0.24.0"
 }
 
 compileKotlin {
@@ -31,4 +31,16 @@ compileKotlin {
 }
 compileTestKotlin {
     kotlinOptions.jvmTarget = "1.8"
+}
+
+tasks {
+    test {
+        useJUnitPlatform()
+        testLogging {
+            events "skipped", "failed", "passed"
+        }
+//        afterTest { descriptor, result ->
+//            println "\n [$descriptor.classDisplayName] > [$descriptor.displayName]: $result.resultType"
+//        }
+    }
 }
