--- a/build.gradle
+++ b/build.gradle
@@ -2,42 +2,26 @@ plugins {
     id 'org.jetbrains.kotlin.jvm' version '1.3.71'
 }
 
-group 'org.example'
+group 'com.ubertob.pesticide'
 version '1.0-SNAPSHOT'
 
-repositories {
-    jcenter()
-}
 
-wrapper {
-    gradleVersion = "6.3"
-}
+allprojects {
 
-dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.0-M1'
-
-    testImplementation 'com.willowtreeapps.assertk:assertk-jvm:0.17'
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.1'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.6.1'
-    testRuntimeOnly "org.junit.platform:junit-platform-launcher:1.6.1"
-
-    testImplementation "dev.minutest:minutest:+"
-    testImplementation "io.strikt:strikt-core:0.24.0"
-}
-
-compileKotlin {
-    kotlinOptions.jvmTarget = "1.8"
-}
-compileTestKotlin {
-    kotlinOptions.jvmTarget = "1.8"
-}
-
-tasks {
-    test {
-        useJUnitPlatform()
-        testLogging {
-            events "skipped", "failed", "passed"
-        }
+    repositories {
+        jcenter()
     }
+
+    wrapper {
+        gradleVersion = "6.3"
+    }
+
+
+    compileKotlin {
+        kotlinOptions.jvmTarget = "1.8"
+    }
+    compileTestKotlin {
+        kotlinOptions.jvmTarget = "1.8"
+    }
+
 }
