--- a/pesticide-examples/build.gradle
+++ b/pesticide-examples/build.gradle
@@ -10,6 +10,8 @@ compileTestKotlin {
 }
 
 dependencies {
+    implementation project(":pesticide-core")
+
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.0-M1'
 
