--- a/pesticide-examples/build.gradle
+++ b/pesticide-examples/build.gradle
@@ -13,15 +13,13 @@ dependencies {
     implementation project(":pesticide-core")
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.0-M1'
+    implementation "dev.minutest:minutest:1.11.0"
+    implementation "io.strikt:strikt-core:0.25.0"
 
-    testImplementation 'com.willowtreeapps.assertk:assertk-jvm:0.17'
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.1'
+    implementation 'org.junit.jupiter:junit-jupiter-api:5.6.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.6.1'
     testRuntimeOnly "org.junit.platform:junit-platform-launcher:1.6.1"
 
-    testImplementation "dev.minutest:minutest:+"
-    testImplementation "io.strikt:strikt-core:0.24.0"
 }
 
 tasks {
