--- a/pesticide-core/build.gradle
+++ b/pesticide-core/build.gradle
@@ -6,13 +6,11 @@ plugins {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.0-M1'
 
-    implementation 'org.junit.jupiter:junit-jupiter-api:5.6.1'
-    implementation "dev.minutest:minutest:1.11.0"
+    implementation "org.junit.jupiter:junit-jupiter-api:$junitVersion"
+    implementation "dev.minutest:minutest:$minutestVersion"
 
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.6.1'
-    testRuntimeOnly "org.junit.platform:junit-platform-launcher:1.6.1"
+    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:$junitVersion"
 }
 
 tasks {
