--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,13 @@
 plugins {
     id 'org.jetbrains.kotlin.jvm' version '1.3.71'
+    id 'io.codearte.nexus-staging' version '0.21.2'
 }
-
-group 'com.ubertob.pesticide'
-version '1.0-SNAPSHOT'
 
 
 allprojects {
 
     repositories {
+        mavenCentral()
         jcenter()
     }
 
@@ -16,13 +15,13 @@ allprojects {
         gradleVersion = "6.3"
     }
 
-
-
-
 }
 
 
 subprojects {
+    group 'com.ubertob.pesticide'
+    version '0.9.1'
+
     compileKotlin {
         kotlinOptions.jvmTarget = "1.8"
     }
@@ -30,10 +29,13 @@ subprojects {
         kotlinOptions.jvmTarget = "1.8"
     }
 
-    ext{
+    ext {
         junitVersion = "5.6.1"
         minutestVersion = "1.11.0"
         junitLauncherVersion = "1.6.1"
         striktVersion = "0.25.0"
     }
 }
+
+
+
