--- a/build.gradle
+++ b/build.gradle
@@ -20,7 +20,7 @@ allprojects {
 
 subprojects {
     group 'com.ubertob.pesticide'
-    version '0.9.1'
+    version '0.9.2-SNAPSHOT'
 
     compileKotlin {
         kotlinOptions.jvmTarget = "1.8"
