--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'org.jetbrains.kotlin.jvm' version '1.3.71'
+    id 'org.jetbrains.kotlin.jvm' version '1.3.72'
     id 'io.codearte.nexus-staging' version '0.21.2'
 }
 
@@ -15,19 +15,21 @@ allprojects {
         gradleVersion = "6.3"
     }
 
+    allprojects {
+        //Support @JvmDefault
+        tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
+            kotlinOptions {
+                freeCompilerArgs = ['-Xjvm-default=enable'] //enable or compatibility
+                jvmTarget = "1.8"
+            }
+        }
+    }
 }
 
 
 subprojects {
     group 'com.ubertob.pesticide'
     version '0.9.2-SNAPSHOT'
-
-    compileKotlin {
-        kotlinOptions.jvmTarget = "1.8"
-    }
-    compileTestKotlin {
-        kotlinOptions.jvmTarget = "1.8"
-    }
 
     ext {
         junitVersion = "5.6.1"
@@ -36,6 +38,3 @@ subprojects {
         striktVersion = "0.25.0"
     }
 }
-
-
-
