--- a/pesticide-core/build.gradle
+++ b/pesticide-core/build.gradle
@@ -3,6 +3,12 @@ plugins {
     id 'com.bmuschko.nexus' version '2.3.1'
 }
 
+//compileKotlin {
+//    kotlinOptions.jvmTarget = "1.8"
+//}
+//compileTestKotlin {
+//    kotlinOptions.jvmTarget = "1.8"
+//}
 
 
 dependencies {
