--- a/pesticide-examples-java/build.gradle
+++ b/pesticide-examples-java/build.gradle
@@ -4,14 +4,14 @@ plugins {
 
 dependencies {
     implementation project(":pesticide-core")
+
+    implementation 'org.assertj:assertj-core:3.15.0'
+
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
     testImplementation "org.junit.jupiter:junit-jupiter-api:$junitVersion"
-    testImplementation "dev.minutest:minutest:$minutestVersion"
 
     testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:$junitVersion"
     testRuntimeOnly "org.junit.platform:junit-platform-launcher:$junitLauncherVersion"
-
-    implementation "io.strikt:strikt-core:$striktVersion"
 }
 
 tasks {
