--- a/build.gradle
+++ b/build.gradle
@@ -14,15 +14,6 @@ allprojects {
         gradleVersion = "6.3"
     }
 
-    allprojects {
-        //Support @JvmDefault
-        tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
-            kotlinOptions {
-                freeCompilerArgs = ['-Xjvm-default=enable'] //enable or compatibility
-                jvmTarget = "1.8"
-            }
-        }
-    }
 }
 
 
@@ -35,5 +26,22 @@ subprojects {
         minutestVersion = "1.11.0"
         junitLauncherVersion = "1.6.1"
         striktVersion = "0.25.0"
+    }
+
+
+    compileKotlin {
+        kotlinOptions.jvmTarget = "1.8"
+    }
+    compileTestKotlin {
+        kotlinOptions.jvmTarget = "1.8"
+    }
+
+
+    //Support @JvmDefault
+    tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
+        kotlinOptions {
+            freeCompilerArgs = ['-Xjvm-default=enable'] //enable or compatibility
+            jvmTarget = "1.8"
+        }
     }
 }
