--- a/pesticide-core/build.gradle
+++ b/pesticide-core/build.gradle
@@ -6,8 +6,7 @@ plugins {
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
 
-    api "org.junit.jupiter:junit-jupiter-api:$junitVersion"
-    api "org.junit.jupiter:junit-jupiter-engine:$junitVersion"
+    api "org.junit.jupiter:junit-jupiter:$junitVersion"
 }
 
 tasks {
