### v0.9.6 - pass the domain from one step to the next - improved the step auto naming

--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,7 @@ allprojects {
 
 subprojects {
     group 'com.ubertob.pesticide'
-    version '0.9.6-SNAPSHOT'
+    version '0.9.6'
 
     ext {
         junitVersion = "5.6.1"
