--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,7 @@ allprojects {
 
 subprojects {
     group 'com.ubertob.pesticide'
-    version '0.9.8'
+    version '0.9.9-SNAPSHOT'
 
     ext {
         junitVersion = "5.6.1"
