added http server to PetShop example

--- a/gradle.properties
+++ b/gradle.properties
@@ -4,3 +4,8 @@ org.gradle.jvmargs=-Xmx1024m
 org.gradle.caching=false
 org.gradle.parallel=true
 kotlin.incremental=true
+#deps version
+http4kVersion=3.244.0
+junitVersion=5.6.1
+junitLauncherVersion=1.6.1
+striktVersion=0.25.0
