--- a/pesticide-examples/build.gradle
+++ b/pesticide-examples/build.gradle
@@ -6,7 +6,9 @@ dependencies {
     implementation project(":pesticide-core")
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
 
-    //DomainUnderTest and Actors are in src/main, not in test...
+    implementation "org.http4k:http4k-core:${http4kVersion}"
+    implementation "org.http4k:http4k-server-jetty:${http4kVersion}"
+
     implementation "com.codeborne:selenide:4.14.2"
     implementation 'org.seleniumhq.selenium:htmlunit-driver:2.39.0'
     implementation "io.strikt:strikt-core:$striktVersion"
@@ -20,8 +22,8 @@ tasks {
         testLogging {
             events "skipped", "failed", "passed"
         }
-        //show println in test console
-        testLogging.showStandardStreams = true
+        //if true show println in test console
+        testLogging.showStandardStreams = false
 
         // start tests every time, even when code not changed
         outputs.upToDateWhen { false }
