adding http layer to PetShopDDT

--- a/pesticide-examples/build.gradle
+++ b/pesticide-examples/build.gradle
@@ -8,6 +8,7 @@ dependencies {
 
     implementation "org.http4k:http4k-core:${http4kVersion}"
     implementation "org.http4k:http4k-server-jetty:${http4kVersion}"
+    implementation "com.beust:klaxon:${klaxonVersion}"
 
     implementation "com.codeborne:selenide:4.14.2"
     implementation 'org.seleniumhq.selenium:htmlunit-driver:2.39.0'
