--- a/pesticide-examples/build.gradle
+++ b/pesticide-examples/build.gradle
@@ -9,11 +9,11 @@ dependencies {
     implementation "org.http4k:http4k-server-jetty:${http4kVersion}"
     implementation "com.beust:klaxon:${klaxonVersion}"
 
-    implementation project(":pesticide-core")
-    implementation "com.codeborne:selenide:4.14.2"
-    implementation 'org.seleniumhq.selenium:htmlunit-driver:2.39.0'
-    implementation "io.strikt:strikt-core:$striktVersion"
-    implementation "org.http4k:http4k-client-jetty:${http4kVersion}"
+    testImplementation project(":pesticide-core")
+    testImplementation "com.codeborne:selenide:4.14.2"
+    testImplementation "org.seleniumhq.selenium:htmlunit-driver:2.39.0"
+    testImplementation "io.strikt:strikt-core:$striktVersion"
+    testImplementation "org.http4k:http4k-client-jetty:${http4kVersion}"
 
     testRuntimeOnly "org.junit.platform:junit-platform-launcher:$junitLauncherVersion"
 }
