--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,10 @@
 plugins {
     id 'org.jetbrains.kotlin.jvm' version '1.3.72'
 }
-
-
 allprojects {
+
+    group 'com.ubertob.pesticide'
+    version '0.9.10'
 
     repositories {
         mavenCentral()
@@ -14,13 +15,6 @@ allprojects {
         gradleVersion = "6.3"
     }
 
-}
-
-
-subprojects {
-    group 'com.ubertob.pesticide'
-    version '0.9.10-SNAPSHOT'
-
     compileKotlin {
         kotlinOptions.jvmTarget = "1.8"
     }
@@ -29,3 +23,5 @@ subprojects {
     }
 
 }
+
+
