pushed back minimum version required of JUnit5

--- a/pesticide-core/build.gradle
+++ b/pesticide-core/build.gradle
@@ -6,7 +6,7 @@ plugins {
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
 
-    api "org.junit.jupiter:junit-jupiter:$junitVersion"
+    api "org.junit.jupiter:junit-jupiter:5.5.0"
 }
 
 tasks {
