--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,11 @@
 plugins {
     id 'org.jetbrains.kotlin.jvm' version '1.3.72'
 }
+
 allprojects {
 
     group 'com.ubertob.pesticide'
-    version '0.9.11-SNAPSHOT'
+    version '0.9.12'
 
     repositories {
         mavenCentral()
