--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ plugins {
 allprojects {
 
     group 'com.ubertob.pesticide'
-    version '0.9.12'
+    version '0.9.13-SNAPSHOT'
 
     repositories {
         mavenCentral()
