--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ plugins {
 allprojects {
 
     group 'com.ubertob.pesticide'
-    version '1.1-SNAPSHOT'
+    version '1.1'
 
     repositories {
         mavenCentral()
