--- a/pesticide-examples-java/build.gradle
+++ b/pesticide-examples-java/build.gradle
@@ -5,6 +5,7 @@ plugins {
 dependencies {
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
+    implementation "com.sparkjava:spark-core:2.8.0"
 
     testImplementation project(":pesticide-core")
     testImplementation 'org.assertj:assertj-core:3.15.0'
