--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ plugins {
 allprojects {
 
     group 'com.ubertob.pesticide'
-    version '1.3.1 '
+    version '1.4-SNAPSHOT'
 
     repositories {
         mavenCentral()
