--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,11 @@
 plugins {
-    id 'org.jetbrains.kotlin.jvm' version '1.4.20'
+    id 'org.jetbrains.kotlin.jvm' version '1.4.31'
 }
 
 allprojects {
 
     group 'com.ubertob.pesticide'
-    version '1.4.1-SNAPSHOT'
+    version '1.4.1'
 
     repositories {
         mavenCentral()
@@ -13,7 +13,7 @@ allprojects {
     }
 
     wrapper {
-        gradleVersion = "6.7"
+        gradleVersion = "6.8.3"
     }
 
     compileKotlin {
