--- a/pesticide-core/build.gradle
+++ b/pesticide-core/build.gradle
@@ -7,6 +7,8 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
 
     api "org.junit.jupiter:junit-jupiter:${junitVersion}"
+
+    testImplementation "io.strikt:strikt-core:$striktVersion"
 }
 
 tasks {
