--- a/build.gradle
+++ b/build.gradle
@@ -16,13 +16,14 @@ allprojects {
         gradleVersion = "6.8.3"
     }
 
-    compileKotlin {
-        kotlinOptions.jvmTarget = "1.8"
-    }
-    compileTestKotlin {
-        kotlinOptions.jvmTarget = "1.8"
-    }
-
 }
 
-
+subprojects {
+//    tasks.withType(KotlinCompile).all {
+    tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
+        kotlinOptions {
+            jvmTarget = "1.8"
+            freeCompilerArgs = ['-Xjvm-default=all']
+        }
+    }
+}
